syntax = "proto3";

package user;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/DeniesKresna/jhapi2-user/pb/user";

message User {
    uint64 id = 1;
    string first_name = 2;
    string last_name = 3;
    string email = 4;
    string phone = 5;
    string image_url = 6;
    uint64 role_id = 7;
    google.protobuf.Timestamp created_at = 8;
    google.protobuf.Timestamp updated_at = 9;
}